--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - stable
-  - lts/erbium
-  - lts/dubnium
+  - node
+  - lts/*
 
 env:
   - TYPESCRIPT_VERSION=latest
