--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "prettier": "^2.1.2",
     "should": "^13.2.3",
     "ts-node": "^9.0.0",
-    "typescript": ">=3.7.0"
+    "typescript": "^4.0.0"
   }
 }
